# agent-test

./: FOLLOWUP.md  README.md  project_summary.csv  pyproject.toml  requirements.txt  web.py
docqa_agent/: __init__.py  __main__.py  agent.py  answerer.py  chat_window.py  chunker.py  cli.py  llm_config.py  llm_settings.json  models.py  parser.py  pdf_analyzer.py  vector_store.py  web_app.py
templates/: index.html  result.html
tests/: test_core.py
